--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 
  <body>
   <nav class="top_banner">
-    <img class="logo_img" alt="Logo sample" src="Media/logo.png" align="left">
+    <img class="logo_img" alt="logo sample" src="Media/logo.png" align="left">
     <div class="title">
-      <div class="name">Forepeak Solutions Portfolio</div>
+      <div class="name">Forepeak Solutions</div>
       <div class="position">Full Stack Web Development</div>
     </div>
   </nav>
   <hr class="thin">
+  <img class="feat_img" alt="featured image" src="Media/feature.jpg">
   </header>
  </body>
 
