--- a/index.html
+++ b/index.html
@@ -16,8 +16,34 @@
     </div>
   </nav>
   <hr class="thin">
-  <img class="feat_img" alt="featured image" src="Media/feature.jpg">
-  </header>
+  <img class="main_img" alt="main image" src="Media/main.jpg">
+  <div class="second_title">Featured Work</div>
+  <div>
+  <a href="https://github.com/epawlak8/Python_Adventure_Quiz.git"
+  target="_blank">
+    <p id=imagewithcaption>
+      <img alt="feature" src="Media/computer_tablet_1.jpeg">
+      <br>Python Adventure Quiz<br><br>
+      Choose your own adventure using python!<br></p>
+  </a>
+  <a href="https://github.com/epawlak8/Movie_Website.git"
+  target="_blank">
+    <p id=imagewithcaption>
+      <img alt="feature" src="Media/computer_tablet_2.jpeg">
+      <br>Moive Website<br><br>
+      Movie trailer website generated dynamically using python backend
+      code!</p>
+  </a>
+  <a href="https://github.com/epawlak8/Pitch_Perfect.git"
+  target="_blank">
+    <p id=imagewithcaption>
+      <img alt="feature" src="Media/computer_tablet_3.jpeg">
+      <br>Pitch Perfect<br><br>
+      An iOS app that records audio clips and plays them back with effects
+      applied</p>
+ </a>
+
+
  </body>
 
 
