finishing and syntax

--- a/index.html
+++ b/index.html
@@ -6,29 +6,28 @@
     <link rel="stylesheet" href="CSS/style.css">
     <title>Forepeak Solutions Portfolio</title>
   </head>
-
  <body>
-  <nav class="top_banner">
-    <img class="logo_img" alt="logo sample" src="Media/logo.png" align="left">
+  <header class="top_banner">
+    <img class="logo_img" alt="logo sample" src="Media/logo.png">
     <div class="title">
-      <div class="name">Forepeak Solutions</div>
-      <div class="position">Full Stack Web Development</div>
+      <h1 class="name">Forepeak Solutions</h1>
+      <h2 class="position">Full Stack Web Development</h2>
     </div>
-  </nav>
+  </header>
   <hr class="thin">
   <img class="main_img" alt="main image" src="Media/main.jpg">
-  <div class="second_title">Featured Work</div>
+  <h2 class="second_title">Featured Work</h2>
   <div>
   <a href="https://github.com/epawlak8/Python_Adventure_Quiz.git"
   target="_blank">
-    <p id=imagewithcaption>
+    <p class=imagewithcaption>
       <img alt="feature" src="Media/computer_tablet_1.jpeg">
       <br>Python Adventure Quiz<br><br>
       Choose your own adventure using python!<br></p>
   </a>
   <a href="https://github.com/epawlak8/Movie_Website.git"
   target="_blank">
-    <p id=imagewithcaption>
+    <p class=imagewithcaption>
       <img alt="feature" src="Media/computer_tablet_2.jpeg">
       <br>Moive Website<br><br>
       Movie trailer website generated dynamically using python backend
@@ -36,15 +35,12 @@
   </a>
   <a href="https://github.com/epawlak8/Pitch_Perfect.git"
   target="_blank">
-    <p id=imagewithcaption>
+    <p class=imagewithcaption>
       <img alt="feature" src="Media/computer_tablet_3.jpeg">
       <br>Pitch Perfect<br><br>
       An iOS app that records audio clips and plays them back with effects
       applied</p>
  </a>
-
-
+ </div>
  </body>
-
-
 </html>
