change lower elements to flexbox, formatting

--- a/index.html
+++ b/index.html
@@ -17,30 +17,29 @@
   <hr class="thin">
   <img class="main_img" alt="main image" src="Media/main.jpg">
   <h2 class="second_title">Featured Work</h2>
-  <div>
-  <a href="https://github.com/epawlak8/Python_Adventure_Quiz.git"
-  target="_blank">
-    <p class=imagewithcaption>
-      <img alt="feature" src="Media/computer_tablet_1.jpeg">
-      <br>Python Adventure Quiz<br><br>
-      Choose your own adventure using python!<br></p>
-  </a>
-  <a href="https://github.com/epawlak8/Movie_Website.git"
-  target="_blank">
-    <p class=imagewithcaption>
-      <img alt="feature" src="Media/computer_tablet_2.jpeg">
-      <br>Moive Website<br><br>
-      Movie trailer website generated dynamically using python backend
-      code!</p>
-  </a>
-  <a href="https://github.com/epawlak8/Pitch_Perfect.git"
-  target="_blank">
-    <p class=imagewithcaption>
-      <img alt="feature" src="Media/computer_tablet_3.jpeg">
-      <br>Pitch Perfect<br><br>
-      An iOS app that records audio clips and plays them back with effects
-      applied</p>
- </a>
+  <div class="flex_container">
+    <a href="https://github.com/epawlak8/Python_Adventure_Quiz.git"
+    target="_blank">
+      <p class=image_with_caption>
+        <img alt="feature" src="Media/computer_tablet_1_med.jpeg">
+        <br>Python Adventure Quiz<br><br>
+        A choose your own<br> adventure game</p>
+    </a>
+    <a href="https://github.com/epawlak8/Movie_Website.git"
+    target="_blank">
+      <p class=image_with_caption>
+        <img alt="feature" src="Media/computer_tablet_2_med.jpeg">
+        <br>Moive Website<br><br>
+        Movie trailer website that is<br> generated
+        dynamically</p>
+    </a>
+    <a href="https://github.com/epawlak8/Pitch_Perfect.git"
+    target="_blank">
+      <p class=image_with_caption>
+        <img alt="feature" src="Media/computer_tablet_3_med.jpeg">
+        <br>Pitch Perfect<br><br>
+        iOS app that manipulates <br>a recorded audio clip</p>
+   </a>
  </div>
  </body>
 </html>
